--- a/test_dist/products.html
+++ b/test_dist/products.html
@@ -35,6 +35,7 @@
 </section>
 
 <script src="js/thirdparty/jquery-3.4.0.min.js" type="text/javascript"></script>
-<script src="js/script.min.js" type="text/javascript"></script>
+<script src="js/script.js" type="text/javascript"></script>
+<!--<script src="js/script.min.js" type="text/javascript"></script>-->
 </body>
 </html>
